--- a/record.weekhelp.sh.template
+++ b/record.weekhelp.sh.template
@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 # post-commit hook to write the project name and the commit msg to weekhelp.md
 
 # 系统类型：linux, macos, windows, unknown
@@ -77,10 +77,10 @@ function insert_before_blank_line {
     # 在空白行前插入新的内容
     # 如果text中包含/等特殊字符，如何额外处理，避免sed命令出错。
     text_quoted=$(printf '%q' "- $text")
-    echo "$text_quoted"
-    echo "$filepath" 
-    echo "$blank_line_number" 
-    echo "$((blank_line_number-1))"
+    # echo "$text_quoted"
+    # echo "$filepath" 
+    # echo "$blank_line_number" 
+    # echo "$((blank_line_number-1))"
 
     if [[ "$SYS_TYPE" == "macos" ]]; then
         # 第二行的内容会原样插入文件中，前面不可以有空格
@@ -100,11 +100,11 @@ if grep -q "## $project_name" "$filepath"; then
     # echo "查找：## $project_name 在文件 $filepath"
     # 项目名的行号
     title_line_number=$(grep -n -m 1 -w -F "## $project_name" "$filepath" | cut -d ":" -f 1)
-    echo "title_line_number: $title_line_number"
+    # echo "title_line_number: $title_line_number"
 
     # 找到第一个空白行
     blank_line_number=$(find_blank_line "$filepath" "$((title_line_number+1))")
-    echo "blank_line_number: $blank_line_number"
+    # echo "blank_line_number: $blank_line_number"
 
     # 在空白行后插入新的内容
     # sed -i "${blank_line_number}a\## $project_name" "$filepath"
