添加了插件logo &&  更新了插件描述

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "weekhelp",
   "displayName": "Week Help",
-  "description": "简单的周报助手",
+  "description": "自动收集 git 提交信息，为写周报提供素材。",
   "version": "0.0.3",
   "repository": "https://github.com/dowithless/weekhelp",
   "publisher": "dowithless",
+  "icon": "icon.png",
   "engines": {
     "vscode": "^1.89.0"
   },
